--- a/client/src/components/ReviewCard.css
+++ b/client/src/components/ReviewCard.css
@@ -24,7 +24,8 @@
 }
 
 .restaurant-img {
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
